--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,7 @@ services:
   backend:
     image: 127.0.0.1:5000/swarm-playground-backend
     build: backend
+    deploy:
+      replicas: 2
+    environment:
+      REPLICA: "{{.Task.Slot}}"
