--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,21 @@ services:
       replicas: 2
     environment:
       REPLICA: "{{.Task.Slot}}"
+
+  mongo:  # for now for Spring Session
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: mongodb
+      MONGO_INITDB_DATABASE: swarm-playground
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: mongodb
+      ME_CONFIG_MONGODB_URL: mongodb://root:mongodb@mongo:27017/
