Pushing metrics to elastic.

--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -9,3 +9,10 @@ spring:
   session:
     mongodb:
       collection-name: sessions
+management:
+  elastic:
+    metrics:
+      export:
+        enabled: true
+        step: 1m
+        index: micrometer-metrics
