--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: web
     ports:
       - "8080:8080"
+    environment:
+      MANAGEMENT_ELASTIC_METRICS_EXPORT_HOST: https://elastic:9200
   backend:
     image: 127.0.0.1:5000/swarm-playground-backend
     build: backend
@@ -11,6 +13,7 @@ services:
       replicas: 2
     environment:
       REPLICA: "{{.Task.Slot}}"
+      MANAGEMENT_ELASTIC_METRICS_EXPORT_HOST: https://elastic:9200
 
   mongo:  # for now for Spring Session
     image: mongo
@@ -24,7 +27,7 @@ services:
     image: mongo-express
     restart: always
     ports:
-      - 8081:8081
+      - "8081:8081"
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: mongodb
