--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      MANAGEMENT_ELASTIC_METRICS_EXPORT_HOST: https://elastic:9200
+      MANAGEMENT_ELASTIC_METRICS_EXPORT_HOST: https://es01:9200
   backend:
     image: 127.0.0.1:5000/swarm-playground-backend
     build: backend
@@ -13,7 +13,7 @@ services:
       replicas: 2
     environment:
       REPLICA: "{{.Task.Slot}}"
-      MANAGEMENT_ELASTIC_METRICS_EXPORT_HOST: https://elastic:9200
+      MANAGEMENT_ELASTIC_METRICS_EXPORT_HOST: https://es01:9200
 
   mongo:  # for now for Spring Session
     image: mongo
@@ -39,7 +39,11 @@ services:
     ports:
       - "9200:9200"
     environment:
-      ES_JAVA_OPTS: "-Xms1g -Xmx1g"
+      ES_JAVA_OPTS: "-Xms2g -Xmx2g"
+      cluster.routing.allocation.disk.threshold_enabled: false  # because my disk is almost full
+#      XPACK_SECURITY_ENABLED: false
+#      XPACK_SECURITY_HTTP_SSL_ENABLED: false
+#      ELASTIC_PASSWORD: i0i9*mM1CJlJ2Xr4gjbo
 
   kibana:
     depends_on:
@@ -47,3 +51,5 @@ services:
     image: docker.elastic.co/kibana/kibana:8.13.4
     ports:
       - "5601:5601"
+    environment:
+      ELASTICSEARCH_HOSTS: https://elastic:9200
