--- a/elastic/docker-compose.yml
+++ b/elastic/docker-compose.yml
@@ -62,8 +62,7 @@ services:
 
   es01:
     depends_on:
-      setup:
-        condition: service_healthy
+      - setup
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
     volumes:
       - certs:/usr/share/elasticsearch/config/certs
@@ -88,7 +87,10 @@ services:
       - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
-    mem_limit: ${MEM_LIMIT}
+    deploy:
+      resources:
+        limits:
+          memory: ${MEM_LIMIT}
     ulimits:
       memlock:
         soft: -1
@@ -127,7 +129,10 @@ services:
       - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
-    mem_limit: ${MEM_LIMIT}
+    deploy:
+      resources:
+        limits:
+          memory: ${MEM_LIMIT}
     ulimits:
       memlock:
         soft: -1
@@ -166,7 +171,10 @@ services:
       - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
-    mem_limit: ${MEM_LIMIT}
+    deploy:
+      resources:
+        limits:
+          memory: ${MEM_LIMIT}
     ulimits:
       memlock:
         soft: -1
@@ -183,12 +191,9 @@ services:
 
   kibana:
     depends_on:
-      es01:
-        condition: service_healthy
-      es02:
-        condition: service_healthy
-      es03:
-        condition: service_healthy
+      - es01
+      - es02
+      - es03
     image: docker.elastic.co/kibana/kibana:${STACK_VERSION}
     volumes:
       - certs:/usr/share/kibana/config/certs
@@ -201,7 +206,10 @@ services:
       - ELASTICSEARCH_USERNAME=kibana_system
       - ELASTICSEARCH_PASSWORD=${KIBANA_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=config/certs/ca/ca.crt
-    mem_limit: ${MEM_LIMIT}
+    deploy:
+      resources:
+        limits:
+          memory: ${MEM_LIMIT}
     healthcheck:
       test:
         [
