Sending data to `metrics` index.

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -3,5 +3,4 @@ management:
     metrics:
       export:
         enabled: true
-        step: 1m
-        index: micrometer-metrics
+        index: metrics
